# bundle-size

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
bundle_size/: __init__.py  core.py
tests/: test_bundle_size.py
